# sRPC

./: .gitignore  CMakeLists.txt  README.md  doxyfile  rrr.hpp
apps/hello_world/: CMakeLists.txt
apps/hello_world/config_files/: app.yml  host_catskill.yml  host_greenport.yml  srpc-server.yml
apps/hello_world/src/: AppConfig.cpp  AppConfig.hpp  c.cpp  hello.h  hello.rpc  s.cpp
apps/rpc_test/: CMakeLists.txt  Makefile  benchmarks.cpp  counter.rpc  run_s.sh  s.cpp
apps/rpc_test/config_files/: app.yml  cpu.yml  dpdk.yml  host.yml  host_brooklyn.yml  host_catskill.yml  host_greenport.yml  network_catskill.yml  network_greenport.yml  srpc-client.yml  srpc-server.yml  srpc.yml
apps/rpc_test/src/: AppConfig.cpp  AppConfig.hpp  benchmarks.cpp  benchmarks.hpp  c.cpp  counter.h  s.cpp
apps/rpc_test/stats/: process_latency
apps/rpc_test/stats/batching/latency/: clt_dpdk_bat_128  clt_dpdk_bat_16  clt_dpdk_bat_256  clt_dpdk_bat_8
apps/rpc_test/stats/batching/throughput/: ser_dpdk_bat_3  ser_dpdk_bat_8
apps/rpc_test/stats/incast/throughput/: ser_dpdk_inc_1  ser_dpdk_inc_24
apps/rpc_test/stats/old1/: clt_dpdk_nt_10_npg_1  clt_dpdk_nt_10_npg_10  clt_dpdk_nt_1_npg_10  clt_dpdk_nt_5_npg_10  clt_dpdk_nt_5_npg_20  clt_tcp_nt_1_npg_1  clt_tcp_nt_5_npg_5  ser_dpdk_nt_10_npg_10  ser_dpdk_nt_1_npg_1  ser_dpdk_nt_1_npg_5  ser_tcp_nt_1_npg_1  ser_tcp_nt_1_npg_10  ser_tcp_nt_5_npg_1
apps/rpc_test/stats/request_size/throughput/: ser_dpdk_req_1024  ser_dpdk_req_1344  ser_dpdk_req_256  ser_dpdk_req_512  ser_dpdk_req_64
apps/rpc_test/stats/thread/latency/: clt_dpdk_thr_24  clt_dpdk_thr_4  clt_dpdk_thr_8
apps/rpc_test/stats/thread/throughput/: ser_dpdk_thr_24  ser_dpdk_thr_4
base/: all.hpp  misc.hpp  threading.cpp  threading.hpp
include/: config.hpp  rrr.hpp
include/base/: all.hpp  basetypes.hpp  debugging.hpp  logging.hpp  misc.hpp  strop.hpp  threading.hpp  unittest.hpp
include/misc/: alarm.hpp  alock.hpp  cpuinfo.hpp  dball.hpp  marshal.hpp  recorder.hpp  stat.hpp
include/rpc/: server.hpp  utils.hpp
include/rpc/dpdk_transport/: transport.hpp  transport_connection.hpp  transport_marshal.hpp
include/utils/: hostname.h
misc/: marshal.cpp  marshal.hpp  stat.hpp
pylib/simplerpcgen/: lang_cpp.py  rpcgen.py
rpc/: UDPServer.cpp  UDPServer.hpp~  client.cpp  client.hpp  polling.cpp  polling.hpp  reporter.cpp  reporter.hpp  server.cpp  server.hpp  utils.cpp
rpc/dpdk/: dpdk.cpp  dpdk.hpp  dpdkdef.hpp
rpc/dpdk_transport/: config.cpp  config.hpp  transport.cpp  transport.hpp  transport_cm.cpp  transport_connection.cpp  transport_connection.hpp  transport_ev_loop.cpp  transport_init.cpp  transport_marshal.hpp  utils.hpp
rpc_test/: CMakeLists.txt  Makefile  The_lat_graph.ipynb  benchmarks.cpp  benchmarks.hpp  c.cpp  c_share_n.cpp  c_share_one.cpp  cl_output  client.prof  client_stat  client_stat_tcp  counter.h  counter.rpc  d_c_out  d_s_out  gmon.out  gnu_prof.txt  gprof.prof  gprof.txt  gprof_arr.txt  gprof_nolookup-tx_loop-2.txt  gprof_nolookup-tx_loop.txt  gprof_nolookup.txt  logs  run_c.sh  run_s.sh  s.cpp  server.cg  server.prof  server_callg  server_stat  server_stat_tcp  srv  srv.c
rpc_test/.ipynb_checkpoints/: graph_maker-checkpoint.ipynb
rpc_test/cmake/: clean-all.cmake.in
rpc_test/config_files/: benchmarks.yml  dpdk.yml  host_brooklyn.yml  host_catskill.yml  host_greenport.yml  network_brooklyn.yml  network_catskill.yml  network_greenport.yml
rpc_test/stats/: clt_dpdk_nt_10_npg_5  clt_dpdk_nt_5_npg_1  clt_dpdk_nt_5_npg_5  clt_tcp_nt_10_npg_10  clt_tcp_nt_10_npg_5  clt_tcp_nt_1_npg_10  clt_tcp_nt_1_npg_20  clt_tcp_nt_1_npg_5  clt_tcp_nt_5_npg_10  clt_tcp_nt_5_npg_20  processing_time  ser_dpdk_nt_10_npg_1  ser_dpdk_nt_10_npg_5  ser_dpdk_nt_1_npg_20  ser_dpdk_nt_5_npg_1  ser_dpdk_nt_5_npg_10  ser_dpdk_nt_5_npg_20  ser_dpdk_nt_5_npg_5  ser_tcp_nt_10_npg_1  ser_tcp_nt_10_npg_10  ser_tcp_nt_10_npg_5  ser_tcp_nt_1_npg_20  ser_tcp_nt_1_npg_5  ser_tcp_nt_5_npg_10  ser_tcp_nt_5_npg_5
rpc_test/stats/batching/latency/: clt_dpdk_bat_1  clt_dpdk_bat_32  clt_dpdk_bat_64
rpc_test/stats/batching/throughput/: ser_dpdk_bat_128  ser_dpdk_bat_16  ser_dpdk_bat_256  ser_dpdk_bat_32  ser_dpdk_bat_512  ser_dpdk_bat_64
rpc_test/stats/incast/throughput/: ser_dpdk_inc_8
rpc_test/stats/incast/througput/: ser_dpdk_inc_16  ser_dpdk_inc_4
rpc_test/stats/old1/: clt_dpdk_nt_1_npg_1  clt_dpdk_nt_1_npg_20  clt_dpdk_nt_1_npg_5  clt_tcp_nt_10_npg_1  clt_tcp_nt_5_npg_1  ser_dpdk_nt_1_npg_10  ser_tcp_nt_5_npg_10  ser_tcp_nt_5_npg_20
rpc_test/stats/thread/latency/: clt_dpdk_thr_1  clt_dpdk_thr_16
rpc_test/stats/thread/throughput/: ser_dpdk_thr_1  ser_dpdk_thr_16  ser_dpdk_thr_8
scripts/: he_cl.sh  he_se.sh  run_c.sh  run_s.sh
src/: rrr.hpp
src/base/: all.hpp  basetypes.cpp  debugging.cpp  logging.cpp  logging.hpp  misc.cpp  strop.cpp  threading.cpp  threading.hpp  unittest.cpp
src/coroutine/: coroutine.cc  event.cc  scheduler.cc
src/misc/: alock.cpp  dball.hpp  marshal.cpp  marshal.hpp  rand.cpp  recorder.cpp
src/mq/: buf.cpp  client.cpp  polling.cpp  rpc.cpp  server.cpp
src/rpc/: UDPServer.cpp  client.cpp  client.hpp  polling.cpp  polling.hpp  server.cpp  server.hpp  us_server.cpp  utils.hpp
src/rpc/dpdk_transport/: all.hpp  config.cpp  config.hpp  transport.cpp  transport.hpp  transport_connection.cpp  transport_connection.hpp  transport_ev_loop.cpp  transport_marshal.hpp  utils.hpp
